Update with Comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,3 +13,10 @@
 	</ul>
 </p>
 
+<%= form_for [@post, @comment] do |f| %> <!-- nest comment under post-->
+<%= f.label :content %>
+<%= f.text_area :content, rows:5 %> <!-- rows:5 limits the size of box to 5 rows-->
+</br>
+<%= f.submit "Add a comment" %>
+
+<% end %>
